force-app/main/default/objects/RequiredFieldsObjectConfiguration__mdt/RequiredFieldsObjectConfiguration__mdt.object-meta.xml
<CustomObject>
    <label>Required Field Object Configuration</label>
    <pluralLabel>Required Field Object Configurations</pluralLabel>
</CustomObject>