force-app/main/default/objects/RequiredFieldsObjectConfiguration__mdt/fields/ObjectAPIName__c.field-meta.xml
<CustomField>
    <fullName>ObjectAPIName__c</fullName>
    <inlineHelpText>The object whose records are queried - e.g. Contact if viewing child Contact records on an Account.</inlineHelpText>
    <label>Object API Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>