force-app/main/default/objects/RequiredFieldsObjectConfiguration__mdt/fields/RelationshipFieldAPIName__c.field-meta.xml
<CustomField>
    <fullName>RelationshipFieldAPIName__c</fullName>
    <inlineHelpText>The lookup field connecting the child (whose records are being viewed) to the parent (the object whose page the component is on) - e.g. AccountId if viewing Contact records on an Account.</inlineHelpText>
    <label>Relationship Field API Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>