force-app/main/default/objects/RequiredFieldsObjectConfiguration__mdt/fields/StageFieldAPIName__c.field-meta.xml
<CustomField>
    <fullName>StageFieldAPIName__c</fullName>
    <inlineHelpText>The field on the parent object which defines what fields are required (could be any kind of field with defined values, e.g. Lead Status, Opportunity Stage etc.)</inlineHelpText>
    <label>Stage Field API Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>